Adjusting widths to counteract layout bug

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -122,7 +122,7 @@ header ul {
 }
 
 header li {
-  width:86px;
+  width:82px;
   float:left;
   border-right:1px solid #d2d2d2;
   height:40px;
@@ -151,7 +151,7 @@ header ul li + li {
 
 header ul li + li + li {
   border-right:none;
-  width:67px;
+  width:86px;
 }
 
 header ul a strong {
